--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -4,7 +4,7 @@
         <span class="align-middle">Check In For [[session.current_period_day_of_week]]</span>            
 
         <span class = "float-end">
-            <span class="text-success" v-if="session_player.checked_in_today">You are checked in for day [[session.current_period]] <i class="fas fa-check"></i></span>
+            <span class="text-success" v-if="session_player.checked_in_today">You are checked in for [[session.current_period_day_of_week]] <i class="fas fa-check"></i></span>
 
             <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDoc('{{subject_check_in_help_doc}}')">
                 <i class="far fa-question-circle"></i> 
