update checkin labels.

--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -25,7 +25,7 @@
         </div>
         <div class="row">
             <div class="col text-end pe-1 text-nowrap">
-                Daily wrist minutes required to check-in:
+                Today's wrist time required to check-in:
             </div>
             <div class="col text-start ps-1">
                 <span v-if="session.current_parameter_set_period">
