--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -60,6 +60,7 @@
 {%include "help_modal.html"%}
 {%include "staff/staff_session/session/edit_session_modal.html"%}
 {%include "staff/staff_session/subjects/edit_subject_modal.html"%}
+{%include "staff/staff_session/subjects/view_subject_modal.html"%}
 {%include "staff/staff_session/subjects/upload_email_list.html"%}
 {%include "staff/staff_session/control/sendInvitationModal.html"%}
 
