--- a/main/templates/staff/staff_session/subjects/edit_subject_modal.html
+++ b/main/templates/staff/staff_session/subjects/edit_subject_modal.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}
 
-<!-- Edit Session Modal -->
+<!-- Edit subject Modal -->
 <div class="modal fade" id="editSubjectModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editSubjectModalLabel" aria-hidden="true">
 <div class="modal-dialog">
     <div class="modal-content">
