store group earnings after all checkin

--- a/main/templates/staff/staff_session/subjects/view_subject_modal.html
+++ b/main/templates/staff/staff_session/subjects/view_subject_modal.html
@@ -23,15 +23,15 @@
                     </tr>
                 </thead>
                 <tbody id="player_list">
-                    <tr v-for="(p, index) in session.session_players[current_subject]" v-bind:key="p.id">
-                        <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)">
-                            [[p.player_number]]
+                    <!-- <tr v-for="(p, index) in session.session_players[current_subject]" v-bind:key="p.id">
+                        <td class="player_table_cell text-nowrap">
+                           
                         </td>
-                        <td class="player_table_cell text-nowrap" v-on:click="showEditSubject(p.id)">
-                            [[p.parameter_set_player.id_label]]
+                        <td class="player_table_cell text-nowrap">
+                           
                         </td>
                                                    
-                    </tr>
+                    </tr> -->
                 </tbody>
                 
             </table>
