--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -85,13 +85,13 @@
     </div>
 </div>
 
-<div class="row justify-content-center mt-2">
+<div class="row justify-content-center mt-2 pb-0 mb-0">
     <div class="col-md text-end text-muted">
-        <span class="align-middle">Client [[session_player.player_number]]</span>
+        <span class="align-middle">Client [[session.id]]:[[session_player.player_number]]</span>
     </div>  
 </div>
 
-<div class="row justify-content-center mt-1">
+<div class="row justify-content-center pt-0 mt-0">
     <div class="col-md text-end text-muted">
         <span class="align-middle">v[[software_version]]</span>
     </div>  
