Show missed check in total on subject view. Fixes #37.

--- a/main/templates/staff/staff_session/subjects/view_subject_modal.html
+++ b/main/templates/staff/staff_session/subjects/view_subject_modal.html
@@ -38,7 +38,8 @@
                             Wrist Time
                         </th> 
                         <th scope="col" class = "text-center m-1 p-1 w-auto">
-                            Check In
+                            Check In<br>
+                            Missed: [[session.session_players[current_subject].missed_check_ins]]
                         </th>   
                         <th scope="col" class = "text-center m-1 p-1 w-auto">
                             Force Check In
