Activity download. fixes #43.

--- a/main/templates/staff/staff_session/data/data_card.html
+++ b/main/templates/staff/staff_session/data/data_card.html
@@ -41,9 +41,9 @@
                 <button type="button"
                         class="btn btn-outline-primary"
                         v-on:click = "downloadActivityData()"
-                        title="Download Activites"
+                        title="Download activities"
                         v-bind:disabled="reconnecting || working || session.started==false">
-                    Download Activites <i class="fas fa-scroll"></i>
+                    Download activities <i class="fas fa-scroll"></i>
                 </button>
             </div>
         </div>
