update parameter graph labels. Fixes #45.

--- a/main/templates/staff/staff_session_parameters/periods/periods_card.html
+++ b/main/templates/staff/staff_session_parameters/periods/periods_card.html
@@ -34,10 +34,10 @@
                                     Show<br>Notice
                                 </th>
                                 <th scope="col" class = "text-nowrap">
-                                    Show<br>Graph 1/2
+                                    Show<br>Graph B/F
                                 </th> 
                                 <th scope="col" class = "text-nowrap">
-                                    Graph<br>Range 1/2
+                                    Graph<br>Range B/F
                                 </th>
                                 <th scope="col" class = "text-nowrap">
                                     Pay<br>Block
