Show payments card on server after start. Fixes #46.

--- a/main/templates/staff/staff_session.html
+++ b/main/templates/staff/staff_session.html
@@ -100,7 +100,7 @@
             </div>                
         </div>
 
-        <div class="row mt-2">
+        <div class="row mt-2" v-show="session.started">
             <div class="col">
                 {%include "staff/staff_session/payments/payments_card.html"%}
             </div>                
