show spinner on client when checking in. fixes #50.

--- a/main/templates/subject/subject_home/checkin/checkin_card.html
+++ b/main/templates/subject/subject_home/checkin/checkin_card.html
@@ -107,7 +107,10 @@
                         v-on:click = "checkIn()" 
                         v-bind:disabled="reconnecting || working"> 
                     
-                    <span v-if="session_player.checked_in_today">
+                    <span v-if="working">
+                        <i class="fas fa-cog fa-spin fa-1x"></i>
+                    </span>
+                    <span v-else-if="session_player.checked_in_today">
                         Check In Again <i class="fas fa-check"></i>
                     </span>
                     <span v-else>
