--- a/main/templates/staff/staff_session/subjects/upload_email_list.html
+++ b/main/templates/staff/staff_session/subjects/upload_email_list.html
@@ -2,14 +2,14 @@
 
 <!-- Edit Session Modal -->
 <div class="modal fade" id="uploadEmailModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="uploadEmailModalLabel" aria-hidden="true">
-<div class="modal-dialog">
+<div class="modal-dialog modal-lg">
     <div class="modal-content">
     <div class="modal-header">
-        <h5 class="modal-title">Upload Email List</h5>
+        <h5 class="modal-title">Upload player list from Recruiter</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
-        <label for="id_email_list" class="form-label">Email List, CSV format.</label>
+        <label for="id_email_list" class="form-label">CSV/TAB format.</label>
         <textarea class="form-control" id="id_email_list" v-model="csv_email_list" rows="10"></textarea>
     </div>
     <div class="modal-footer">
