--- a/main/templates/staff/staff_session/graph/graph_card.html
+++ b/main/templates/staff/staff_session/graph/graph_card.html
@@ -26,10 +26,9 @@
                              v-bind:style= "[(c.text=='|') ? {'opacity': '0'}:{}]"
                              v-bind:id="'chat_id_' + c.id">
                             
-                             <span v-if="c.chat_type=='All'"><span class="fw-bold">[[c.sender_label]]:</span> [[c.text]]</span>
-                             <span v-else><span class="fw-bold">[[c.sender_label]]<i class="fas fa-xs fa-arrow-right"></i><span v-html='c.session_player_recipients[0]'></span>:</span> [[c.text]]</span>
+                             <span class="fw-bold">[[c.sender_label]]:</span> [[c.text]]
+                             
                         </div>
-
                     </div>
                 </div>
 
