--- a/main/templates/subject/subject_home/chat/chat_card.html
+++ b/main/templates/subject/subject_home/chat/chat_card.html
@@ -1,7 +1,13 @@
 
 <div class="card">                  
     <div class="card-header fw-bold">                
-        <span class="align-middle">Chat</span>                    
+        <span class="align-middle">Chat</span>         
+        
+        <span class = "float-end">
+            <button type="button" class="btn btn-link ms-4" title="Show Help Doc" v-on:click="sendLoadHelpDoc('Subject chat help')">
+                <i class="far fa-question-circle"></i> 
+            </button>
+        </span>
     </div>
     <div class="card-body">     
         <div class="row justify-content-center">
