--- a/main/templates/staff/staff_session/graph/graph_card.html
+++ b/main/templates/staff/staff_session/graph/graph_card.html
@@ -1,4 +1,4 @@
-<div class="card">                  
+<div class="card" id="graph_card_id">                  
     <div class="card-header fw-bold">                
         <span class="align-middle">Chat</span>           
         
