--- a/main/templates/subject/subject_home.html
+++ b/main/templates/subject/subject_home.html
@@ -30,6 +30,8 @@
         word-breaK:break-word;
         overflow-y:scroll;
         background-color: ghostwhite;
+        display:flex; 
+        flex-direction:column-reverse;
     }
        
 </style>
